Fixed whitespace issues that caused longer loading times.  Still need to improve alliance selector in player editor.

--- a/templates/alliance_editor.html
+++ b/templates/alliance_editor.html
@@ -29,9 +29,7 @@
             </td>
             <td>
               <input class="form-control" type="checkbox" name="alliances[{{alliance.id}}][family]" value="{{alliance.id}}"
-              {% if alliance.active %}
-                checked
-              {% endif %}
+              {%- if alliance.active %} checked {% endif -%}
               >
             </td>
           </tr>
