--- a/static/style.css
+++ b/static/style.css
@@ -428,6 +428,15 @@ body {
   font-weight: bold;
 }
 
+.playerCount {
+  font-weight: bold;
+  font-size: large;
+  position: absolute;
+  bottom: 0.4em;
+  left: 1em;
+  white-space: nowrap;
+}
+
 #alert_wrapper {
   width: 70em;
 }
