--- a/templates/player_editor.html
+++ b/templates/player_editor.html
@@ -25,7 +25,13 @@
               {%- if t.alliance == alliance.id %} selected {% endif %}>{{alliance.name}}</option>
                 {% endif %}
               {% endfor %}
+              <option value="0" {% if t.alliance == 0 %} selected {% endif %}>Unknown</option>
             </select>
+          </div>
+          <div class="col-auto">
+            <div class="playerCount">
+              {{ t.players|length }} Players
+            </div>
           </div>
         </div>
       </form>
