Added quick score setter

--- a/templates/war_editor.html
+++ b/templates/war_editor.html
@@ -163,6 +163,10 @@
             </td>
           </tr>
         </table>
+
+        <button class="btn btn-info" type="button" id="setAll300" title="Or double click the Score field!">Set All to 300</button>
+        <button class="btn btn-info" type="button" id="resetAll">Reset All Scores</button>
+
         <table class="table table-sm w-auto" id="editor_table">
           <thead>
             <tr class="text-center">
