Added bundles calculator

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,7 @@
             <div class="dropdown-menu" aria-labelledby="navUtilities">
                 <a class="dropdown-item {% block nav_ore %}{% endblock %}" href="{{url_for('ore_calculator')}}">Ore Calculator</a>
                 <a class="dropdown-item {% block nav_war_calculator %}{% endblock %}" href="{{url_for('war_calculator')}}">War Calculator</a>
+                <a class="dropdown-item {% block nav_bundle %}{% endblock %}" href="{{url_for('bundle_calculator')}}">Bundle Calculator</a>
             </div>
           </li>
           {% if current_user.officer %}
