--- a/templates/bundle_calculator.html
+++ b/templates/bundle_calculator.html
@@ -94,12 +94,12 @@
           </tr>
         </table>
 
-        Coins needed for each set of bundles for point total goal.
+        Coins needed for each set of bundles (or no bundles) for point total goal.
         <br />
         <table class="table table-sm w-auto" id="coins_table">
           <thead>
             <tr class="text-center">
-              <th title="Set number for the bundle above.">Set</th>
+              <th title="Set number for the bundle above.  Set 0 is for no bundles and only your starting coins.">Set</th>
               <th title="Total coins available from bundles and prior to event.">Coins Available</th>
               <th title="Additional fuel needed after free and bundle fuel.">Fuel Needed</th>
               <th title="Coins needed for fuel refills.">Coins Needed</th>
