--- a/templates/history.html
+++ b/templates/history.html
@@ -8,6 +8,7 @@
 {% block header %}TFEW War History{% endblock %}
 {% block nav_history %}active{% endblock %}
 {% block active_check %}{% endblock %}
+{% block min_wars %}{% endblock %}
 
 {% block content %}
       <div class="col-md-5 table-responsive float-sm-none float-md-right">
