--- a/templates/scoreboard.html
+++ b/templates/scoreboard.html
@@ -7,6 +7,7 @@
 {% block title %}TFEW Scoreboard{% endblock %}
 {% block header %}TFEW Scoreboard{% endblock %}
 {% block nav_home %}active{% endblock %}
+{% block min_wars %}{% endblock %}
 
 {% block content %}
     </div>
