--- a/templates/player.html
+++ b/templates/player.html
@@ -11,6 +11,7 @@
 {% block nav_player %}active{% endblock %}
 {% block tracked_check %}{% endblock %}
 {% block active_check %}{% endblock %}
+{% block min_wars %}{% endblock %}
 
 {% block content %}
       <br />
