Added XP Calculator

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,7 @@
                 <a class="dropdown-item {% block nav_ore %}{% endblock %}" href="{{url_for('ore_calculator')}}">Ore Calculator</a>
                 <a class="dropdown-item {% block nav_war_calculator %}{% endblock %}" href="{{url_for('war_calculator')}}">War Calculator</a>
                 <a class="dropdown-item {% block nav_bundle %}{% endblock %}" href="{{url_for('bundle_calculator')}}">Bundle Calculator</a>
+                <a class="dropdown-item {% block nav_xp %}{% endblock %}" href="{{url_for('xp_calculator')}}">XP Calculator</a>
             </div>
           </li>
           {% if current_user.officer %}
